--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <div class="floating-hearts" id="hearts"></div>
         <h1>For My Beloved Aadu</h1>
         <p id="message">Press the button to receive a love letter written just for you, my darling Aadu...</p>
-        <button class="btn" onclick="generateLoveNote()">Send Love to Aadu</button>
+        <button class="btn" onclick="generateLoveNote()">Tap to get the Love Notes</button>
         <div class="signature">Forever Yours</div>
     </div>
 
